# py-core

./: .gitignore  README.md  pyproject.toml  test.py
core/api/: __init__.py
core/api/classes/: api.py  api_channel.py  api_channel_collection.py  api_channel_event.py  api_channel_event_collection.py  api_endpoint.py  api_endpoint_collection.py  api_store.py  api_transaction.py
core/api/mixins/: __init__.py  api_mixin.py
core/client/: __init__.py
core/client/classes/: http_client.py  http_client_session.py  http_request.py  http_response.py  http_transaction.py  ws_client.py  ws_client_session.py  ws_connection.py
core/client/enums/: __init__.py  http_method.py
core/client/exceptions/: __init__.py
core/client/functions/: http_delete.py  http_get.py  http_patch.py  http_post.py  http_put.py  http_request.py
core/client/types/: __init__.py
core/clients/classes/: api.py  api_endpoint.py  api_request.py  api_response.py  api_transaction.py
core/clients/mixins/: api_mixin.py
core/clients/types/: __init__.py
core/collection/: __init__.py
core/collection/classes/: collection.py  dict_collection.py  list_collection.py  ring_collection.py
core/collection/exceptions/: __init__.py
core/collection/functions/: filter_checkers.py  filter_conditions.py
core/collections/: __init__.py  dict_collection.py
core/collections/classes/: collection.py  item.py  item_meta.py  item_metaclass.py  items.py  store.py
core/collections/exceptions/: __init__.py
core/datetime/functions/: __init__.py  dtnow.py  dtto_utc.py
core/dict/classes/: __init__.py  dict_schema_context.py
core/enums/: __init__.py
core/exceptions/: __init__.py
core/functions/: datetime.py  dict.py  dictionary.py  object.py
core/placeholders/: __init__.py
core/types/: __init__.py
(+21 files in other folders)
